# easy-gpgpu-rust

./: Cargo.toml  README.md
src/: lib.rs  libs.rs  main.rs
tests/: test.rs
