[package]
name = "easy-gpgpu"
version = "0.1.0"
edition = "2021"
authors = ["Ratipoka"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["gpu", "gpgpu", "wgpu", "computations", "simple"]
categories = ["hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }