[package]
name = "easy-gpgpu"
repository = "https://github.com/Ratipoka/easy-gpgpu-rust"
version = "0.1.6"
edition = "2021"
authors = ["Ratipoka"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A simple library for computations on the gpu."
keywords = ["gpu", "gpgpu", "wgpu", "computations", "simple"]
categories = ["hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.5", features = ["derive"] }